# forking-paths

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_audit_with_prereg.md  sample_provenance.md
experiments/gate-drift-evaluation/: PLAN.md  SESSION-LOG-2026-05-23.md
guardrails/: prereg.template.md  system-prompt.md
guardrails/methods/: README.md  prereg.did.md  prereg.iv.md  prereg.rdd.md
src/forking_paths/: __init__.py  classify.py  cli.py  compare.py  fingerprint.py  flag.py  ledger_audit.py  parser.py  prereg.py  report.py
tests/: test_classify.py  test_compare.py  test_fingerprint.py  test_fingerprint_integration.py  test_flag.py  test_ledger_audit.py  test_parser.py  test_prereg.py  test_report.py
tests/fixtures/: clean_session.jsonl  considered_not_reported.jsonl  directional_prior_with_drop.jsonl  prereg_clean.md  session_attgt_armA.jsonl  session_deviated_from_prereg.jsonl  session_documented_deviation.jsonl  session_event_study_modelcols_armC.jsonl  session_followed_prereg.jsonl  session_twfe_multispec_armB.jsonl
