[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forking-paths"
version = "0.1.0"
description = "Provenance audit for AI-assisted empirical research. Reads a Claude Code session log and surfaces the decision graph for self-audit and referee transparency."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Victoria Cholette" }]
requires-python = ">=3.9"
dependencies = []
keywords = [
  "research-provenance",
  "empirical-economics",
  "ai-research",
  "specification-search",
  "forking-paths",
  "replication",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/dphdame/forking-paths"
Issues = "https://github.com/dphdame/forking-paths/issues"

[project.scripts]
forking-paths = "forking_paths.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
